fix(services): enable cross-origin configuration on tender and user services